--- a/web/index.html
+++ b/web/index.html
@@ -72,7 +72,7 @@
         </div>
 
         <footer class="footer">
-            <p>© Vitalij Karpusa <a href="#">http://www.karpusa.lv</a></p>
+            <p>© Vitalij Karpusa <a href="http://www.karpusa.lv">http://www.karpusa.lv</a></p>
         </footer>
     </div>
 
